# ESP32-CAM-Tensorflow-lite-Person-Detect

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/esp32-camera/driver/: sccb.c
components/tfmicro/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  detection_responder.cpp  main_functions.cpp
main/esp/: app_camera_esp.c  app_httpd.cpp  app_httpd.h  image_provider.cpp  main.cpp  wifi_sta.c  wifi_sta.h
